Javascript basics notes

--- a/Basics/HTML/universal-script.html
+++ b/Basics/HTML/universal-script.html
@@ -30,7 +30,7 @@
     <body>
         <!-- Everything inside this tag will be shown in the page visually so it's useful to put text, images, links, etc. -->
         
-        <scritpt src="script.js"></script>
+        <script src="script.js"></script>
         <!-- This links the HTML with the Javascript script -->
     </body>
 </html>
